added style for application image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
     <div class="header">
         {% if site.photo %}
-        <img class="particles-photo" src="{{ site.photo }}" />
+        <img class="header-photo" src="{{ site.photo }}" />
         {% endif %}
         <h1>
             <span class="site-title">{{site.username}}</span>
