--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -45,6 +45,13 @@
   }
 }
 
+.header-photo {
+    width: 50%;
+    border-radius: 50%;
+    margin: auto;
+    margin-bottom: 0.5em;
+}
+
 .header-links {
   margin: 10px;
   .link {
