--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -50,6 +50,9 @@
         {%- else -%}
           {%- assign url = html_page.url | relative_url -%}
         {%- endif -%}
+
+        <a class="nav-item nav-link {{ active_status }}" href="{{ url }}" {%- if html_page.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ html_page.title }}</a>
+
       {% endfor %}
     </div>
   </div>
