--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="mt-auto py-3 text-center">
 
   <small class="text-muted mb-2">
-    <i class="fas fa-code"></i> with <i class="fas fa-heart"></i>
-    by <strong>{{ site.author.name }}</strong>
+    <i class="fas fa-copyright"></i> 2023 
+<strong>{{ site.author.name }}</strong>. Powered by Jekyll.
   </small>
 
   {% include social.html %}
