--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,15 @@
 <footer class="mt-auto py-3 text-center">
 
   <small class="text-muted mb-2">
+    Get in touch
+  </small>
+
+  {% include social.html %}
+
+<small class="text-muted mb-2">
     <i class="fas fa-copyright"></i> 2023 
 <strong>{{ site.author.name }}</strong>. Powered by Jekyll.
   </small>
 
-  {% include social.html %}
 
 </footer>
